--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
     <title>Garcia Family Medicine - Direct Primary Care in Blue Springs, MO | $99/Month</title>
     <meta name="title" content="Garcia Family Medicine - Direct Primary Care in Blue Springs, MO | $99/Month">
     <meta name="description" content="Affordable Direct Primary Care in Blue Springs, Missouri. Only $99/month for unlimited visits, no copays, no deductibles. Medical weight management, CoreLift pelvic health, mental health care, DOT physicals, and wellness coaching. Dr. Tess Garcia offers compassionate, comprehensive family medicine.">
-    <meta name="keywords" content="Direct Primary Care Blue Springs, DPC Missouri, family medicine Blue Springs, affordable healthcare, medical weight management, CoreLift, pelvic health, DOT physicals, mental health care Blue Springs, wellness coaching, Dr Tess Garcia, obesity medicine, Hispanic physician, Native American physician, gigiSafeHOUSE">
+    <meta name="keywords" content="Direct Primary Care Blue Springs, DPC Missouri, family medicine Blue Springs, affordable healthcare, medical weight management Blue Springs, CoreLift Blue Springs, pelvic health Missouri, DOT physicals Blue Springs, mental health care Blue Springs, wellness coaching, Dr Tess Garcia, obesity medicine, opioid-free pain management, Hispanic physician, Native American physician, gigiSafeHOUSE, Kansas City area DPC, Lee's Summit family doctor, Independence MO healthcare, Grain Valley doctor, concierge medicine Missouri, membership-based healthcare, no insurance healthcare, CareCredit accepted, IME Blue Springs, stress incontinence treatment">
     <meta name="author" content="Garcia Family Medicine">
     
     <!-- Open Graph / Facebook -->
@@ -45,12 +46,28 @@
         "description": "Direct Primary Care practice offering affordable family medicine in Blue Springs, Missouri. Treating the whole patient: Spirit, Body, and Soul.",
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "Blue Springs",
+            "streetAddress": "801 NW Saint Mary's Drive, Suite 209",
             "addressLocality": "Blue Springs",
             "addressRegion": "MO",
+            "postalCode": "64014",
             "addressCountry": "US"
         },
         "telephone": "(816) 427-5320",
+        "email": "gigi@garciafamilymedicine.care",
+        "url": "https://garciafamilymedicine.care",
+        "openingHoursSpecification": [
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": ["Tuesday", "Wednesday", "Thursday", "Friday"],
+                "opens": "09:00",
+                "closes": "17:00"
+            },
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": "Saturday",
+                "opens": "By Appointment"
+            }
+        ],
         "priceRange": "$$",
         "medicalSpecialty": ["Family Medicine", "Obesity Medicine", "Primary Care"],
         "availableService": [
@@ -62,17 +79,37 @@
             {
                 "@type": "MedicalProcedure",
                 "name": "Medical Weight Management",
-                "description": "Comprehensive weight loss program"
+                "description": "Comprehensive weight loss program with $27 first month special"
             },
             {
                 "@type": "MedicalProcedure",
                 "name": "CoreLift Pelvic Health",
-                "description": "Non-invasive pelvic floor therapy"
+                "description": "Non-invasive pelvic floor therapy using Emsella technology"
             },
             {
                 "@type": "MedicalProcedure",
                 "name": "Mental Health Care",
                 "description": "Comprehensive mental health counseling and medication management"
+            },
+            {
+                "@type": "MedicalProcedure",
+                "name": "DOT Physical Examinations",
+                "description": "Department of Transportation medical examinations"
+            },
+            {
+                "@type": "MedicalProcedure",
+                "name": "Independent Medical Evaluations",
+                "description": "Objective medical evaluations for legal and insurance purposes"
+            },
+            {
+                "@type": "MedicalProcedure",
+                "name": "Wellness Coaching",
+                "description": "Personalized health and lifestyle coaching"
+            },
+            {
+                "@type": "MedicalProcedure",
+                "name": "Opioid-Free Pain Management",
+                "description": "Comprehensive pain management without addictive medications"
             }
         ],
         "founder": {
