--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1166,6 +1165,8 @@
             <p class="tagline">Treating the whole patient: Spirit, Body, and Soul</p>
             <p>&copy; 2024 Garcia Family Medicine. All rights reserved.</p>
             <p>Direct Primary Care | Blue Springs, Missouri</p>
+            <p class="footer-credits">Video Production & Creative Media by <strong>StoryWorks Lighthouse Media</strong><br>
+            <em>Official creative arm for video production, storytelling, marketing, and design</em></p>
         </div>
     </footer>
 
