--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -92,7 +92,7 @@
            HERO SECTION
            ============================================ */
         .hero {
-            background: linear-gradient(135deg, var(--deep-blue) 0%, var(--teal) 100%);
+            background: linear-gradient(135deg, var(--primary-orange) 0%, var(--deep-blue) 100%);
             color: var(--white);
             padding: 6rem 0 4rem;
             text-align: center;
@@ -208,11 +208,6 @@
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
         }
 
-        .benefit-icon {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-
         /* ============================================
            SERVICES/PACKAGES SECTION
            ============================================ */
@@ -244,7 +239,7 @@
             left: 0;
             right: 0;
             height: 5px;
-            background: linear-gradient(90deg, var(--primary-orange), var(--teal));
+            background: linear-gradient(90deg, var(--primary-orange), var(--deep-blue));
         }
 
         .package-card:hover {
@@ -340,7 +335,7 @@
         }
 
         .impact-highlight {
-            background: linear-gradient(135deg, var(--primary-orange), var(--teal));
+            background: linear-gradient(135deg, var(--primary-orange), var(--deep-blue));
             color: var(--white);
             padding: 1rem;
             border-radius: 8px;
@@ -408,12 +403,6 @@
             margin-bottom: 1rem;
         }
 
-        .why-icon {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            color: var(--teal);
-        }
-
         /* ============================================
            PROCESS SECTION
            ============================================ */
@@ -436,7 +425,7 @@
             flex-shrink: 0;
             width: 60px;
             height: 60px;
-            background: linear-gradient(135deg, var(--primary-orange), var(--teal));
+            background: linear-gradient(135deg, var(--primary-orange), var(--deep-blue));
             color: var(--white);
             border-radius: 50%;
             display: flex;
@@ -587,7 +576,7 @@
         .submit-btn {
             width: 100%;
             padding: 1rem 2rem;
-            background: linear-gradient(135deg, var(--primary-orange), var(--teal));
+            background: linear-gradient(135deg, var(--primary-orange), var(--deep-blue));
             color: var(--white);
             border: none;
             border-radius: 6px;
@@ -647,7 +636,7 @@
            FINAL CTA SECTION
            ============================================ */
         .final-cta {
-            background: linear-gradient(135deg, var(--deep-blue) 0%, var(--teal) 100%);
+            background: linear-gradient(135deg, var(--primary-orange) 0%, var(--deep-blue) 100%);
             color: var(--white);
             text-align: center;
             padding: 4rem 0;
@@ -821,22 +810,18 @@
 
             <div class="partnership-benefits">
                 <div class="benefit-card">
-                    <div class="benefit-icon">🎬</div>
                     <h3>Cohesive Storytelling</h3>
                     <p>Your website and videos tell one unified brand story</p>
                 </div>
                 <div class="benefit-card">
-                    <div class="benefit-icon">⏱️</div>
                     <h3>Coordinated Timeline</h3>
                     <p>No vendor juggling—one seamless process</p>
                 </div>
                 <div class="benefit-card">
-                    <div class="benefit-icon">🤝</div>
                     <h3>Single Point of Contact</h3>
                     <p>Work with one cohesive team from start to finish</p>
                 </div>
                 <div class="benefit-card">
-                    <div class="benefit-icon">✨</div>
                     <h3>Greater Impact</h3>
                     <p>Professional integration creates something extraordinary</p>
                 </div>
@@ -995,32 +980,26 @@
             
             <div class="why-grid">
                 <div class="why-card">
-                    <div class="why-icon">✅</div>
                     <h3>Proven Results</h3>
                     <p>This website you're viewing? We built it. From concept to launch, we created a digital presence that reflects Garcia Family Medicine's heart for patients.</p>
                 </div>
                 <div class="why-card">
-                    <div class="why-icon">🏥</div>
                     <h3>Healthcare-Focused</h3>
                     <p>We understand medical practices. We know HIPAA considerations. We speak your language. We've lived your challenges.</p>
                 </div>
                 <div class="why-card">
-                    <div class="why-icon">❤️</div>
                     <h3>Mission-Driven</h3>
                     <p>This isn't just business—it's ministry. Every project supports gigiSafeHOUSE's mission to remove financial barriers to healthcare.</p>
                 </div>
                 <div class="why-card">
-                    <div class="why-icon">🎨</div>
                     <h3>Not Just Templates</h3>
                     <p>We don't use cookie-cutter templates. Every site is custom-built to tell YOUR unique story and serve YOUR specific patients.</p>
                 </div>
                 <div class="why-card">
-                    <div class="why-icon">🤝</div>
                     <h3>Partnership Approach</h3>
                     <p>You're not hiring vendors—you're partnering with people who understand what it means to serve with compassion.</p>
                 </div>
                 <div class="why-card">
-                    <div class="why-icon">💰</div>
                     <h3>100% Tax-Deductible</h3>
                     <p>Your entire investment is a tax-deductible donation to gigiSafeHOUSE, a registered 501(c)(3) nonprofit organization.</p>
                 </div>
@@ -1257,16 +1236,16 @@
                         <strong>Gigi (gigiSafeHOUSE)</strong>
                         Digital Services Director<br>
                         Practice Manager, Garcia Family Medicine<br>
-                        📧 <a href="mailto:gigi@gigiSafeHOUSE.com">gigi@gigiSafeHOUSE.com</a><br>
-                        📱 <a href="tel:816-847-3088">816-847-3088</a><br>
-                        📍 801 NW Saint Mary's Drive, Suite 209<br>
+                        Email: <a href="mailto:gigi@gigiSafeHOUSE.com">gigi@gigiSafeHOUSE.com</a><br>
+                        Phone: <a href="tel:816-847-3088">816-847-3088</a><br>
+                        Address: 801 NW Saint Mary's Drive, Suite 209<br>
                         Blue Springs, MO 64014
                     </div>
                     <div class="contact-item">
                         <strong>StoryWorks Lighthouse Media</strong>
                         Video Production Partner<br>
-                        🎬 Contact via StoryWorks.com<br>
-                        🌐 <a href="https://storyworks.com" target="_blank">StoryWorks.com</a>
+                        Contact: <a href="https://storyworks.com" target="_blank">StoryWorks.com</a><br>
+                        Website: <a href="https://storyworks.com" target="_blank">StoryWorks.com</a>
                     </div>
                 </div>
             </div>
