--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1167,7 +1168,7 @@
             <p>Direct Primary Care | Blue Springs, Missouri</p>
             <p class="footer-credits">Video Production & Creative Media by <strong>StoryWorks Lighthouse Media</strong><br>
             <em>Official creative arm for video production, storytelling, marketing, and design</em></p>
-            <p class="footer-credits" style="margin-top: 0.5rem;">Website Design by <a href="https://gigisafehouse.org" target="_blank" rel="noopener" style="color: #666; text-decoration: none; transition: color 0.3s;">gigiSafeHOUSE</a> | <a href="/digital-services.html" style="color: #FF6B35; text-decoration: none; transition: color 0.3s;">Services Available</a></p>
+            <p class="footer-credits" style="margin-top: 0.5rem; color: #ffffff;">Website Design by <a href="https://gigisafehouse.org" target="_blank" rel="noopener" style="color: #ffffff; text-decoration: none; transition: color 0.3s;">gigiSafeHOUSE</a> | <a href="/digital-services.html" style="color: #FF6B35; text-decoration: none; transition: color 0.3s; font-weight: 500;">Services Available</a></p>
         </div>
     </footer>
 
