--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -891,10 +890,10 @@
             <!-- CareCredit Financing - SERVICE -->
             <div id="carecredit" class="service-box">
                 <div class="service-image">
-                    <img src="CareCredit.png" alt="CareCredit Financing">
+                    <img src="CareCredit.svg" alt="CareCredit Financing" style="max-width: 300px; height: auto;">
                 </div>
                 <div class="service-content">
-                    <h3>CareCredit® Financing - 0% Interest Available</h3>
+                    <h3>CareCredit® Financing - <span style="font-family: 'Poppins', sans-serif;">0%</span> Interest Available</h3>
                     <div class="service-short">
                         <p><strong>Healthcare financing made easy with 0% interest options.</strong> CareCredit helps you pay for healthcare expenses not covered by insurance, allowing you to get the care you need now and pay over time.</p>
                     </div>
