--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -890,7 +890,7 @@
             <!-- CareCredit Financing - SERVICE -->
             <div id="carecredit" class="service-box">
                 <div class="service-image">
-                    <img src="CareCredit.svg" alt="CareCredit Financing" style="max-width: 300px; height: auto;">
+                    <img src="CareCredit.png" alt="CareCredit Financing" style="max-width: 300px; height: auto;">
                 </div>
                 <div class="service-content">
                     <h3>CareCredit® Financing - <span style="font-family: 'Poppins', sans-serif;">0%</span> Interest Available</h3>
