--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -192,7 +192,7 @@
             <div class="slide-content">
                 <h2>Medical Weight Management</h2>
                 <p>Achieving sustainable, long-term health</p>
-                <div class="special-badge" onclick="location.href='#contact'" style="cursor: pointer;">$27 Special</div>
+                <div class="special-badge" onclick="window.open('https://27special.garciafamilymedicine.care', '_blank')" style="cursor: pointer;">$27 Special</div>
                 <button class="read-more-btn" onclick="location.href='#weight-management'">Learn More</button>
             </div>
         </div>
@@ -584,7 +584,7 @@
 
             <!-- Weight Management Service -->
             <div id="weight-management" class="service-box special-box">
-                <div class="special-ribbon" onclick="location.href='#contact'" style="cursor: pointer;">
+                <div class="special-ribbon" onclick="window.open('https://27special.garciafamilymedicine.care', '_blank')" style="cursor: pointer;">
                     <span>First Month $27!</span>
                 </div>
                 <div class="service-image">
@@ -648,7 +648,9 @@
                             </div>
                         </div>
                         
-                        <p class="service-cta"><button class="cta-button" onclick="location.href='#contact'" style="cursor: pointer; background: linear-gradient(135deg, #FF6633, #0066B2); color: white; border: none; padding: 15px 30px; border-radius: 30px; font-size: 1rem; font-weight: 600; margin-top: 20px;">Start your transformation today with our special $27 first month offer!</button></p>
+                        <p class="service-cta"><button class="cta-button" onclick="window.open('https://27special.garciafamilymedicine.care', '_blank')" style="cursor: pointer; background: linear-gradient(135deg, #FF6633, #0066B2); color: white; border: none; padding: 15px 30px; border-radius: 30px; font-size: 1rem; font-weight: 600; margin-top: 20px;">Start your transformation today with our special $27 first month offer!</button></p>
+                        
+                        <p class="service-cta"><button class="cta-button" onclick="window.open('https://tracker.garciafamilymedicine.care', '_blank')" style="cursor: pointer; background: white; color: #0066B2; border: 2px solid #0066B2; padding: 15px 30px; border-radius: 30px; font-size: 1rem; font-weight: 600; margin-top: 10px;">📊 Track Your Weight Loss Progress</button></p>
                     </div>
                     <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
                 </div>
