Update contact email and remove email protection script

--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1112,7 +1112,7 @@
                     </div>
                     <div class="contact-item">
                         <h4>✉️ Email</h4>
-                        <p><a href="/cdn-cgi/l/email-protection#71161816183116100312181017101c181d081c14151812181f145f12100314"><span class="__cf_email__" data-cfemail="81e6e8e6e8c1e6e0f3e2e8e0e7e0ece8edf8ece4e5e8e2e8efe4afe2e0f3e4">[email&#160;protected]</span></a></p>
+                        <p><a href="mailto:gigi@garciafamilymedicine.care">gigi@garciafamilymedicine.care</a></p>
                     </div>
                     <div class="contact-item">
                         <h4>🕐 Hours</h4>
@@ -1208,7 +1208,7 @@
         <span>Back to Top</span>
     </button>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // Language Toggle Functionality
         let currentLang = 'en';
         
