--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -952,13 +951,14 @@
             
             <div class="tesstalk-content">
                 <div class="tesstalk-video">
-                    <!-- Replace YOUR_YOUTUBE_VIDEO_ID with actual YouTube video ID -->
+                    <!-- TessTalk YouTube Video - FIXED! -->
                     <iframe 
-                        src="https://www.youtube.com/embed/YOUR_TESSTALK_VIDEO_ID" 
+                        src="https://www.youtube.com/embed/50nIdYuTyRE" 
                         title="TessTalk with Dr. Tess Garcia" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                        allowfullscreen>
+                        allowfullscreen
+                        style="width: 100%; aspect-ratio: 16/9; border-radius: 12px;">
                     </iframe>
                 </div>
                 <div class="tesstalk-description">
