--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -261,7 +260,7 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-photo">
-                        <img src="Dr_Tess_Emsella.png" alt="Dr. Tess Garcia">
+                        <img src="Dr_Tess_Vest.png" alt="Dr. Tess Garcia">
                     </div>
                     <div class="team-info">
                         <h3>Dr. Tess Garcia</h3>
@@ -352,7 +351,7 @@
             <!-- DPC Membership - FIRST SERVICE -->
             <div id="dpc" class="service-box special-box">
                 <div class="service-image">
-                    <img src="family_business4_png.jpg" alt="Direct Primary Care">
+                    <img src="Family.png" alt="Direct Primary Care">
                 </div>
                 <div class="service-content">
                     <h3>Direct Primary Care</h3>
@@ -554,7 +553,7 @@
             <!-- Mental Health Service -->
             <div id="mental-health" class="service-box">
                 <div class="service-image">
-                    <img src="anxiety1_png.jpg" alt="Mental Health Counseling">
+                    <img src="Anxiety.png" alt="Mental Health Counseling">
                 </div>
                 <div class="service-content">
                     <h3>Mental Health Care: Prioritizing Your Cognitive and Emotional Well-Being</h3>
@@ -675,7 +674,7 @@
             <!-- Wellness Coaching Service -->
             <div id="wellness-coaching" class="service-box">
                 <div class="service-image">
-                    <img src="Gigi left.png" alt="Wellness Coaching with Gigi">
+                    <img src="Gigi_Left.png" alt="Wellness Coaching with Gigi">
                 </div>
                 <div class="service-content">
                     <h3>Wellness Coaching</h3>
@@ -864,7 +863,7 @@
             <!-- Opioid-Free Pain Management - SERVICE -->
             <div id="pain-management" class="service-box">
                 <div class="service-image">
-                    <img src="Pain Mgmt.png" alt="Opioid-Free Pain Management">
+                    <img src="Pain_Mgmt.png" alt="Opioid-Free Pain Management">
                 </div>
                 <div class="service-content">
                     <h3>Comprehensive Opioid-Free Pain Management</h3>
