--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -166,34 +166,46 @@
 
     <!-- Hero Carousel -->
     <section id="home" class="hero-carousel">
+        <!-- DPC Slide with Family.png -->
+        <div class="hero-slide active" style="background-image: url('Family.png');">
+            <div class="slide-overlay"></div>
+            <div class="slide-content">
+                <h2>Direct Primary Care - $99/Month</h2>
+                <p>Quality healthcare without insurance hassles. Unlimited access to your doctor.</p>
+                <button class="read-more-btn exciting" onclick="location.href='#dpc'">Learn More →</button>
+            </div>
+        </div>
+
         <!-- CoreLift Slide -->
-        <div class="hero-slide active" style="background-image: url('CoreLift_Confidence_with_Emsella.png');">
+        <div class="hero-slide" style="background-image: url('CoreLift_Confidence_with_Emsella.png');">
             <div class="slide-overlay"></div>
             <div class="slide-content">
                 <h2>CoreLift Pelvic Health</h2>
                 <p>Non-invasive treatment for stress incontinence and pelvic floor strengthening</p>
-                <button class="read-more-btn" onclick="location.href='#corelift'">Learn More</button>
+                <button class="read-more-btn exciting" onclick="location.href='#corelift'">Learn More →</button>
             </div>
         </div>
 
-        <!-- Mental Health Slide -->
-        <div class="hero-slide" style="background-image: url('anxiety1_png.jpg');">
+        <!-- Mental Health Slide with Anxiety.png -->
+        <div class="hero-slide" style="background-image: url('Anxiety.png');">
             <div class="slide-overlay"></div>
             <div class="slide-content">
                 <h2>Mental Health Counseling</h2>
                 <p>Prioritizing your cognitive and emotional well-being</p>
-                <button class="read-more-btn" onclick="location.href='#mental-health'">Learn More</button>
+                <button class="read-more-btn exciting" onclick="location.href='#mental-health'">Learn More →</button>
             </div>
         </div>
 
-        <!-- Weight Management Slide -->
+        <!-- Weight Management Slide with COLORFUL $27 Special -->
         <div class="hero-slide" style="background-image: url('wm14_png.jpg');">
             <div class="slide-overlay"></div>
             <div class="slide-content">
                 <h2>Medical Weight Management</h2>
                 <p>Achieving sustainable, long-term health</p>
-                <div class="special-badge" onclick="window.open('https://27special.garciafamilymedicine.care', '_blank')" style="cursor: pointer;">$27 Special</div>
-                <button class="read-more-btn" onclick="location.href='#weight-management'">Learn More</button>
+                <div class="special-badge-colorful" onclick="window.open('https://27special.garciafamilymedicine.care', '_blank')" style="cursor: pointer;">
+                    🎉 $27 FIRST MONTH SPECIAL! 🎉
+                </div>
+                <button class="read-more-btn exciting" onclick="location.href='#weight-management'">Learn More →</button>
             </div>
         </div>
 
@@ -203,7 +215,7 @@
             <div class="slide-content">
                 <h2>Independent Medical Evaluations</h2>
                 <p>Professional assessments for workers' compensation and disability cases</p>
-                <button class="read-more-btn" onclick="location.href='#ime'">Learn More</button>
+                <button class="read-more-btn exciting" onclick="location.href='#ime'">Learn More →</button>
             </div>
         </div>
 
@@ -598,8 +610,8 @@
 
             <!-- Weight Management Service -->
             <div id="weight-management" class="service-box special-box">
-                <div class="special-ribbon" onclick="window.open('https://27special.garciafamilymedicine.care', '_blank')" style="cursor: pointer;">
-                    <span>First Month $27!</span>
+                <div class="special-ribbon-colorful" onclick="window.open('https://27special.garciafamilymedicine.care', '_blank')" style="cursor: pointer;">
+                    <span>🎉 FIRST MONTH ONLY $27! 🎉</span>
                 </div>
                 <div class="service-image">
                     <img src="wm14_png.jpg" alt="Medical Weight Management">
